# fov-notification-services

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  docker-compose.yml  main.py  pyproject.toml  pyrightconfig.json  pytest.ini
.github/workflows/: run_tests.yml
alembic/: env.py
alembic/versions/: 20251211_1329_dc538d6a653b_initial_schema.py  20251211_1918_99ca4f6696a7_make_start_end_times_timezone_aware.py
app/: database.py  dependencies.py  scheduler.py
app/models/: __init__.py  observation.py  schedule.py
app/routers/: schedules.py
app/schemas/: schedule.py
app/tasks/: cleanup_schedules.py  retrieve_schedules.py
docs/: healpix_schedule.ipynb
docs/architecture/: c1_context.puml  c2_container.puml
docs/architecture/adrs/: 001-fastapi-over-flask.md
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json
frontend/src/: App.css  App.tsx
services/operator/: .dockerignore  docker-compose.yml  pyproject.toml
services/operator/app/: main.py  scheduler.py
services/operator/app/models/: __init__.py  observation.py  schedule.py
services/operator/app/notifications/: __init__.py  channels.py
services/operator/app/routers/: schedules.py  status.py
services/operator/app/schemas/: schedule.py
services/operator/app/tasks/: cleanup_schedules.py  retrieve_schedules.py
services/operator/tests/: conftest.py  test_routes.py  test_tasks.py
shared/: pyproject.toml
shared/src/notifications/: rabbitmq_broker.py
tests/: conftest.py  test_routes.py  test_tasks.py
