[project]
name = "fov-notification-service"
version = "0.1.0"
description = "Notification service for observation schedules and satellite FOV interference"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "apscheduler>=3.10.4",
    "fastapi[standard]>=0.124.0",
    "httpx>=0.28.0",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.45",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "pre-commit>=4.5.0",
    "ruff>=0.14.8",
    "towncrier>=25.8.0",
]
